// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agent-node-operators-registry e2e tests should process tx with added Node operator 1`] = `
[
  Finding {
    "addresses": [],
    "alertId": "CURATED-ONCHAIN-V1-NODE-OPERATOR-ADDED",
    "description": "curated-onchain-v1 Node operator 30 added
Name: Launchnodes
Reward address: [0x5a8B929EDBf3CE44526465DD2087EC7EFB59A561](https://etherscan.io/address/0x5a8B929EDBf3CE44526465DD2087EC7EFB59A561)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "30,Launchnodes,0x5a8B929EDBf3CE44526465DD2087EC7EFB59A561,0",
    },
    "name": "ℹ️ curated-onchain-v1: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "CURATED-ONCHAIN-V1-NODE-OPERATOR-ADDED",
    "description": "curated-onchain-v1 Node operator 31 added
Name: SenseiNode
Reward address: [0xE556Da28015c04F35A52B3111B9F4120E908056e](https://etherscan.io/address/0xE556Da28015c04F35A52B3111B9F4120E908056e)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "31,SenseiNode,0xE556Da28015c04F35A52B3111B9F4120E908056e,0",
    },
    "name": "ℹ️ curated-onchain-v1: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
]
`;

exports[`agent-node-operators-registry e2e tests should process tx with set NO target limit set 1`] = `
[
  Finding {
    "addresses": [],
    "alertId": "CURATED-ONCHAIN-V1-NODE-OPERATOR-ADDED",
    "description": "curated-onchain-v1 Node operator 32 added
Name: A41
Reward address: [0x2A64944eBFaFF8b6A0d07B222D3d83ac29c241a7](https://etherscan.io/address/0x2A64944eBFaFF8b6A0d07B222D3d83ac29c241a7)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "32,A41,0x2A64944eBFaFF8b6A0d07B222D3d83ac29c241a7,0",
    },
    "name": "ℹ️ curated-onchain-v1: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "CURATED-ONCHAIN-V1-NODE-OPERATOR-ADDED",
    "description": "curated-onchain-v1 Node operator 33 added
Name: Develp GmbH
Reward address: [0x0a6a0b60fFeF196113b3530781df6e747DdC565e](https://etherscan.io/address/0x0a6a0b60fFeF196113b3530781df6e747DdC565e)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "33,Develp GmbH,0x0a6a0b60fFeF196113b3530781df6e747DdC565e,0",
    },
    "name": "ℹ️ curated-onchain-v1: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "CURATED-ONCHAIN-V1-NODE-OPERATOR-ADDED",
    "description": "curated-onchain-v1 Node operator 34 added
Name: Ebunker
Reward address: [0x2A2245d1f47430b9f60adCFC63D158021E80A728](https://etherscan.io/address/0x2A2245d1f47430b9f60adCFC63D158021E80A728)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "34,Ebunker,0x2A2245d1f47430b9f60adCFC63D158021E80A728,0",
    },
    "name": "ℹ️ curated-onchain-v1: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "CURATED-ONCHAIN-V1-NODE-OPERATOR-ADDED",
    "description": "curated-onchain-v1 Node operator 35 added
Name: Gateway.fm AS
Reward address: [0x78CEE97C23560279909c0215e084dB293F036774](https://etherscan.io/address/0x78CEE97C23560279909c0215e084dB293F036774)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "35,Gateway.fm AS,0x78CEE97C23560279909c0215e084dB293F036774,0",
    },
    "name": "ℹ️ curated-onchain-v1: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "CURATED-ONCHAIN-V1-NODE-OPERATOR-ADDED",
    "description": "curated-onchain-v1 Node operator 36 added
Name: Numic
Reward address: [0x0209a89b6d9F707c14eB6cD4C3Fb519280a7E1AC](https://etherscan.io/address/0x0209a89b6d9F707c14eB6cD4C3Fb519280a7E1AC)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "36,Numic,0x0209a89b6d9F707c14eB6cD4C3Fb519280a7E1AC,0",
    },
    "name": "ℹ️ curated-onchain-v1: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "CURATED-ONCHAIN-V1-NODE-OPERATOR-ADDED",
    "description": "curated-onchain-v1 Node operator 37 added
Name: ParaFi Technologies LLC
Reward address: [0x5Ee590eFfdf9456d5666002fBa05fbA8C3752CB7](https://etherscan.io/address/0x5Ee590eFfdf9456d5666002fBa05fbA8C3752CB7)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "37,ParaFi Technologies LLC,0x5Ee590eFfdf9456d5666002fBa05fbA8C3752CB7,0",
    },
    "name": "ℹ️ curated-onchain-v1: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "CURATED-ONCHAIN-V1-NODE-OPERATOR-ADDED",
    "description": "curated-onchain-v1 Node operator 38 added
Name: RockawayX Infra
Reward address: [0xcA6817DAb36850D58375A10c78703CE49d41D25a](https://etherscan.io/address/0xcA6817DAb36850D58375A10c78703CE49d41D25a)
StakingLimit: 0",
    "labels": [],
    "metadata": {
      "args": "38,RockawayX Infra,0xcA6817DAb36850D58375A10c78703CE49d41D25a,0",
    },
    "name": "ℹ️ curated-onchain-v1: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
]
`;

exports[`agent-node-operators-registry e2e tests should process tx with setting node operator name 1`] = `
[
  Finding {
    "addresses": [],
    "alertId": "CURATED-ONCHAIN-V1-NODE-OPERATOR-NAME-SET",
    "description": "curated-onchain-v1 Node operator [23 Galaxy] name set to Galaxy",
    "labels": [],
    "metadata": {
      "args": "23,Galaxy",
    },
    "name": "ℹ️ curated-onchain-v1: Node operator name set",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "CURATED-ONCHAIN-V1-NODE-OPERATOR-NAME-SET",
    "description": "curated-onchain-v1 Node operator [36 Pier Two] name set to Pier Two",
    "labels": [],
    "metadata": {
      "args": "36,Pier Two",
    },
    "name": "ℹ️ curated-onchain-v1: Node operator name set",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "CURATED-ONCHAIN-V1-NODE-OPERATOR-REWARD-ADDRESS-SET",
    "description": "curated-onchain-v1 Node operator [23 Galaxy] reward address set to [0x3C3F243263d3106Fdb31eCf2248f9bC82F723c4B](https://etherscan.io/address/0x3C3F243263d3106Fdb31eCf2248f9bC82F723c4B)",
    "labels": [],
    "metadata": {
      "args": "23,0x3C3F243263d3106Fdb31eCf2248f9bC82F723c4B",
    },
    "name": "ℹ️ curated-onchain-v1: Node operator reward address set",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "CURATED-ONCHAIN-V1-NODE-OPERATOR-REWARD-ADDRESS-SET",
    "description": "curated-onchain-v1 Node operator [36 Pier Two] reward address set to [0x35921FB43cB92F5Bfef7cBA1e97Eb5A21Fc2d353](https://etherscan.io/address/0x35921FB43cB92F5Bfef7cBA1e97Eb5A21Fc2d353)",
    "labels": [],
    "metadata": {
      "args": "36,0x35921FB43cB92F5Bfef7cBA1e97Eb5A21Fc2d353",
    },
    "name": "ℹ️ curated-onchain-v1: Node operator reward address set",
    "protocol": "ethereum",
    "severity": 1,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
]
`;
